fixed buttons on mobile

--- a/projekt-style.css
+++ b/projekt-style.css
@@ -49,7 +49,7 @@ h3 {
     transition: 0.2s ease;
     font-size: 1.1rem;
 }
-#next:hover {
+#next:hover, #next:active {
     background-color: rgb(45, 235, 83);
     color: #0c0c0c;
     font-size: 1.5rem;
